feat: Complete v2.1.0 - Add 6 new horror CPU characters
 New CPU Characters:
- Frankenstein, Dracula, The Exorcist, Creature, Chainsaw, The Mummy
- Expanded from 3 to 9 total horror-themed CPU opponents
- Each character has unique avatar artwork and styling
- Random selection provides variety in CPU games

 Technical Implementation:
- Updated cpuCharacters array with all 9 characters
- Added CSS classes for each new CPU avatar
- Updated package.json to version 2.1.0
- Enhanced documentation (README, CHANGELOG)

 This completes the horror CPU collection feature
Ready for deployment to production!

--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "connect4-game",
-  "version": "1.1.0",
-  "description": "A multiplayer Connect 4 game that can be played in the browser over the internet",
+  "name": "graces-games",
+  "version": "2.1.0",
+  "description": "A multiplayer gaming platform featuring Connect 4 and Checkers with real-time chat, CPU AI, and comprehensive features",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "node server.js"
   },
-  "keywords": ["connect4", "game", "multiplayer", "websocket", "nodejs"],
+  "keywords": ["connect4", "checkers", "game", "multiplayer", "websocket", "nodejs", "platform"],
   "author": "",
   "license": "MIT",
   "dependencies": {
